commit debut datatable + etapeValidante lors de la création d'un classeur

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/a_valider.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/a_valider.html.twig
@@ -4,7 +4,7 @@
     <div class="bloc_page">
         <div class="titre_page">
             <span class="glyphicon glyphicon-list"></span>
-            &nbsp;&nbsp;&nbsp;Liste des classeurs
+            &nbsp;&nbsp;&nbsp;Liste des classeurs à valider
         </div>
         {% include 'SesileClasseurBundle:Classeur:liste_a_valider.html.twig' %}
         {% include 'SesileClasseurBundle:Classeur:legende.html.twig' %}
