--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -114,7 +114,7 @@
                                 Classeurs à valider
                             </div>
 
-                            {% render url("liste_classeurs_a_valider") %}
+                            {% render url("classeur_a_valider") %}
                         </div>
                         <div id="liste_classeurs">
                             <div class="titre_bloc_accueil">
