--- a/src/Sesile/CircuitBundle/Resources/views/Circuit/new.html.twig
+++ b/src/Sesile/CircuitBundle/Resources/views/Circuit/new.html.twig
@@ -1,10 +1,10 @@
 <div class="row">
     <div class="col-lg-12">
         <div id="contetapes">
-            {% for etape in service.etapeGroupes %}
+            {% for etape in service %}
 
                 <div class="col-lg-2 well etapes-circuit">
-                    <div class="text-center"><h4>Etape de validation {{ loop.index }}</h4></div>
+                    <div class="text-center"><h4>Etape de validation {{ etape.id }}</h4></div>
                     {#<input type="hidden" name="etape_id" value="{{ etape.id }}">#}
                     <select class="selusers" multiple="multiple" style="width: 100%" data-etape="{{ etape.id }}">
                         <optgroup label="Groupes d'utilisateurs">
