--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/boutons_action.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/boutons_action.html.twig
@@ -1,4 +1,4 @@
-{% if classeur.isValidableByDelegates(usersdelegated) %}
+{% if classeur.isValidableByDelegates(usersdelegated, validant) %}
 
     {#{% if signable %}#}
     {% if classeur.getType.id == 2 %}
