--- a/src/Sesile/CircuitBundle/Resources/views/Circuit/validation.html.twig
+++ b/src/Sesile/CircuitBundle/Resources/views/Circuit/validation.html.twig
@@ -10,10 +10,40 @@
     </div>
 </div>
 
+<div class="row">
+    <div class="col-lg-12">
+        <div id="contetapes">
+            {% for etape in etapesGroupe %}
+
+                <div class="col-lg-2 well etapes-circuit">
+                    <div class="text-center"><h4>Etape de validation {{ etape.id }}</h4></div>
+                    <select class="selusers" multiple="multiple" style="width: 100%" data-etape="{{ etape.id }}" {% if edit != true %}disabled="disabled"{% endif %}>
+                        <optgroup label="Groupes d'utilisateurs">
+                            {% for userPack in userPacks %}
+                                <option value="userpack-{{ userPack.id }}" {% if userPack in etape.userPacks %} selected{% endif %} data-type="groupe">{{ userPack.nom }}</option>
+                            {% endfor %}
+                        </optgroup>
+                        <optgroup label="utilisateurs">
+                            {% for user in users %}
+                                <option value="user-{{ user.id }}" data-etape="{{ etape.id }}" data-type="user" {% if user in etape.users %} selected{% endif %}>{{ user.prenom }} {{ user.nom }}</option>
+                            {% endfor %}
+                        </optgroup>
+                    </select>
+                    {% if edit %}<button type="button" class="btn btn-danger btn-suppetape" id="suppetape"><span class="glyphicon glyphicon-minus-sign"></span> Supprimer cette étape</button>{% endif %}
+                </div>
+            {% endfor %}
+        </div>
+        {% if edit %}
+        <div class="col-lg-2 text-center">
+            <input type="hidden" name="valeurs" id="valeurs">
+            <button type="button" class="btn btn-info btn-ajout-etape" id="addetape"><span class="glyphicon glyphicon-plus-sign"></span><br>Ajouter une étape</button>
+        </div>
+        {% endif %}
+    </div>
+</div>
 
 <div class="top_selects_circuits" id="circuitvalidation">
-    <span id="useradd_btn"
-          class="glyphicon glyphicon-chevron-up" {% if edit is defined %} style="display: none" {% endif %}></span>
+    <span id="useradd_btn" class="glyphicon glyphicon-chevron-up" {% if edit is defined %} style="display: none" {% endif %}></span>
 
     <div class="titre_select" {% if edit is defined %} style="display: none" {% endif %}>
         <label class="nametitle" id="users_complete">
@@ -25,32 +55,83 @@
     <div id="users_list" {% if edit is defined %} style="display: none" {% endif %}>
         {% for user in users %}
             <p data-id="{{ user.id }}" data-img="{{ user.path }}">
-                {# Avec la mise a jour l affichage du prenom et du nom se fait en JS #}
-                {#{{ user.prenom }} {{ user.nom }}#}
+                {{ user.prenom }} {{ user.nom }}
             </p>
         {% endfor %}
     </div>
 </div>
 
+<script type="application/javascript" src="{{ asset("/js/select2.min.js") }}"></script>
+<link type="text/css" href="{{ asset("/css/select2.css") }}" rel="stylesheet"/>
 
-<script type="text/javascript">
-    $(".nameinput").focus(function () {
-        $(".glyphicon-search-blue").removeClass("glyphicon-search-blue");
-        $(this).prev("label").addClass("glyphicon-search-blue");
-    });
-
-    $("#users_list p, #circuits_list p").click(function () {
-        $(this).siblings(".list_selected_element").removeClass("list_selected_element");
-        $(this).addClass("list_selected_element");
-    });
-
-    var path = "{{ asset(upload_path) }}";
-</script>
 <script type="text/javascript" src="{{ asset('/js/jquery-ui.min.js') }}"></script>
 <script type="text/javascript" src="{{ asset('/js/circuit.js') }}"></script>
 <script type="text/javascript" src="{{ asset('/js/autocomplete.js') }}"></script>
-<script type="text/javascript">
+
+<script>
+    $(document).ready(function() {
+
+        $(".selusers").select2();
+
+        // Pour le bouton de suppression de l etape
+        $(document).on('click','#suppetape',function() {
+            $(this).parent().remove();
+        });
 
 
-    // $("#users_complete").autocomplete({ lookup: users_list });
+        $(document).on('click','#addetape',function(){
+            /*
+             A chaque fois qu'on clicque sur le bouton bleu une nouvelle etape de validation se crée
+             */
+            $('#contetapes').append('' +
+            '<div class="col-lg-2 well etapes-circuit"><div class="text-center"><h4>Etape de validation</h4></div><select class="selusers" multiple="multiple" style="width: 100%" data-etape="0"><optgroup label="Groupes d\'utilisateurs">{% for userPack in userPacks %}<option value="userpack-{{ userPack.id }}" data-type="groupe">{{ userPack.nom }}</option>{% endfor %}</optgroup><optgroup label="utilisateurs">{% for user in users %}<option value="user-{{ user.id }}" data-type="user">{{ user.prenom }} {{ user.nom }}</option>{% endfor %}</optgroup></select><button type="button" class="btn btn-danger btn-suppetape" id="suppetape"><span class="glyphicon glyphicon-minus-sign"></span> Supprimer cette étape</button></div>');
+            $("select.selusers").select2();
+
+        });
+        var tabGeneral = [];
+//        $("#form_edit").submit(function(){
+        $(".btn-valider").on('click',function(){
+            /*
+             * Pour chaque etape de validation créé on récupère les options sélectionnées
+             *
+             * */
+            $('select.selusers').each(function(){
+
+                var Etapes = {};
+                Etapes.etape_id = $(this).data('etape');
+                Etapes.etapes = [];
+
+                if($(this).val())
+                {
+                    $(this).find(':selected').each(function(){
+                        /*
+                         * Pour chaque option selectionnée, on récupère son data-type(groupe ou user) et sa value (id du user ou du userPack)
+                         * */
+                        Etapes.etapes.push({
+                            entite: $(this).data('type'),
+                            id: $(this).val()
+                        });
+                    });
+                } else {
+                    e.preventDefault();
+                }
+                tabGeneral.push(Etapes);
+            });
+
+            /*
+             * on met tout ça dans un tableau que l'on stringifie et qu'on met dans le hidden
+             * */
+            $('#valeurs').val(JSON.stringify(tabGeneral));
+//                tabGeneral = [];
+        });
+
+        {% if edit %}
+            $(function() {
+                $( "#contetapes" ).sortable({
+                    tolerance: "pointer"
+                }).disableSelection();
+            });
+        {% endif %}
+
+    });
 </script>
