--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste.html.twig
@@ -18,7 +18,12 @@
             <td>{{ classeur.nom }}</td>
             <td>{{ classeur.creation|date("d/m/Y") }}</td>
             <td>{{ classeur.validation|date("d/m/Y") }}</td>
-            <td>{% if classeur.status != 2 %} {% for validant in classeur.validants %} {{ validant.prenom }} {{ validant.nom }} {% if loop.index != classeur.validants|length %}/{% endif %} {% endfor %} {% endif %}</td>
+            <td>{% if classeur.status == 0 %}
+                    {{ classeur.deposant }}
+                {% elseif classeur.status != 2 %}
+                    {% for validant in classeur.validants %} {{ validant.prenom }} {{ validant.nom }} {% if loop.index != classeur.validants|length %}/{% endif %} {% endfor %}
+                {% endif %}
+            </td>
             <td>{{ classeur.type.nom }}</td>
             <td>{{ classeur.status }}</td>
             <td>{{ classeur.id }}</td>
