--- a/src/Sesile/DocumentBundle/Resources/views/Document/visu.html.twig
+++ b/src/Sesile/DocumentBundle/Resources/views/Document/visu.html.twig
@@ -6,7 +6,14 @@
         <div class="titre_page">
             <span class="glyphicon glyphicon-eye-open"></span>&nbsp;&nbsp;Visualiseur de fichier PES
         </div>
+        {% if isPJ is defined %}
         <div class="col-lg-12">
+            <label>Ce fichier est un PES PJ ou un autre fichier non soumis à signature</label>
+        </div>
+    </div>
+    {% else %}
+        <div class="col-lg-12">
+
             <div class="form-group">
                 <label for="bordx" class="col-lg-2 ">Bordereau</label>
 
@@ -94,4 +101,6 @@
         });
 
     </script>
+    {% endif %}
+
 {% endblock %}
