--- a/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
@@ -71,7 +71,7 @@
                             Droit de retractation
                         </a>
                     </li>
-                    {% if is_granted('ROLE_AGENT_SICTIAM') %}
+                    {% if is_granted('ROLE_SUPER_ADMIN') %}
                         <li>
                             <a href="{{ path("liste_classeurs_retired") }}">
                                 <img class="arrows" src="{{ asset("/images/arrowblue.png") }}"/>
@@ -104,6 +104,36 @@
                 </ul>
             </li>
             {% endif %}
+            <li class="menu-elem menu-orange ">
+                <div class="dd-toggle entete-menu">
+                    <a href="#">
+                        <div class="rectanglemenu" id="orangeclair"></div>
+                        Documentation<b class="caret carette"></b></a>
+                </div>
+                <ul class="dd-menu">
+                    {% if is_granted('ROLE_SUPER_ADMIN') %}
+                        <li>
+                            <a href="{{ path("indexDoc") }}">
+                                <img class="arrows" src="{{ asset("/images/arrowred.png") }}"/>
+                                Gestion de la documentation
+                            </a>
+                        </li>
+                    {% endif %}
+                    <li>
+                        <a href="{{ path("patchs") }}">
+                            <img class="arrows" src="{{ asset("/images/arrowred.png") }}"/>
+                            Documentation des patchs
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{{ path("aides") }}">
+                            <img class="arrows" src="{{ asset("/images/arrowred.png") }}"/>
+                            Aide en ligne
+                        </a>
+                    </li>
+                </ul>
+            </li>
+
             {% if is_granted('ROLE_ADMIN') %}
                 <li class="menu-elem menu-vert ">
                 <div class="dd-toggle entete-menu">
@@ -146,7 +176,7 @@
                     </a>
                 </li>
             {% endif %}
-            {% if is_granted('ROLE_AGENT_SICTIAM') %}
+                    {% if is_granted('ROLE_SUPER_ADMIN') %}
                 <li>
                     <a href="{{ path("index_emailing") }}">
                         <img class="arrows" src="{{ asset("/images/arrowgreen.png") }}"/>
