Modification du bouton se rétracter Modification du bouton refuser Modification et refonte de la soumission du classeur après le refus
RAV :
- btn retirer
- verif signature
- verif email

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/retired.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/retired.html.twig
@@ -82,7 +82,7 @@
 
         $(document).ready(function () {
             $('#deleter').click(function () {
-                var tabId = []
+                var tabId = [];
                 $('.chk').each(function () {
                     if ($(this).is(':checked')) {
                         // alert($(this).parent().parent().find('.act').attr('data-id'))
