--- a/src/Sesile/UserBundle/Resources/views/SO/edit.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/SO/edit.html.twig
@@ -70,7 +70,7 @@
                 </div>
                 <div class="col-lg-2">
                     <a class="btn btn-primary pull-right" href="{{ path('servicesorg') }}">
-                        <span class="glyphicon glyphicon-share-alt"></span>&nbsp;&nbsp;Retour aux S.O.
+                        <span class="glyphicon glyphicon-share-alt"></span>&nbsp;&nbsp;Retour aux services organisationnels
                     </a>
                 </div>
                 <input type="hidden" name="valeurs" id="valeurs">
