--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
@@ -51,7 +51,7 @@
 
                 <a href="{{ path('classeur') }}" class="btn btn-primary navbar-btn">
                     <span class="glyphicon glyphicon-share-alt"></span>
-                    Retour à la liste des classeur
+                    Retour à la liste des classeurs
                 </a>
 
             </div>
@@ -78,23 +78,37 @@
         <form id="form_edit" action="{{ path("classeur_update") }}" method="post">
             <input type="hidden" name="id" value="{{ classeur.id }}"/>
 
-            <div class="titre_form_element">
-                <span class="glyphicon glyphicon-play"></span>
-                &nbsp;&nbsp;&nbsp;Visibilit&eacute;
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="titre_form_element">
+                        <span class="glyphicon glyphicon-play"></span>
+                        &nbsp;&nbsp;&nbsp;Visibilit&eacute;
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="titre_form_element">
+                        <span class="glyphicon glyphicon-play"></span>
+                        &nbsp;&nbsp;&nbsp;Type du classeur
+                    </div>
+                </div>
             </div>
 
+
             <div class="row">
-                <div class="col-lg-3">
-
-
-                <select class="fuckingvisibility form-control" id="visibilite" name="visibilite">
-                    <option value="2" {% if classeur.visibilite == 2 %} selected="selected" {% endif %}>Privé à partir de moi</option>
-                    <option value="0" {% if classeur.visibilite == 0 %} selected="selected" {% endif %}>Privé</option>
-                    <option value="1" {% if classeur.visibilite == 1 %} selected="selected" {% endif %}>Public</option>
-                    {% if classeur.visibilite == 3 %}
-                        <option value="3" selected="selected">Pour le service organisationnel</option>
-                    {% endif %}
-                </select>
+                <div class="col-lg-6">
+                    <select class="fuckingvisibility form-control" id="visibilite" name="visibilite">
+                        <option value="2" {% if classeur.visibilite == 2 %} selected="selected" {% endif %}>Privé à partir de moi</option>
+                        <option value="0" {% if classeur.visibilite == 0 %} selected="selected" {% endif %}>Privé</option>
+                        <option value="1" {% if classeur.visibilite == 1 %} selected="selected" {% endif %}>Public</option>
+                        {% if classeur.visibilite == 3 %}
+                            <option value="3" selected="selected">Pour le service organisationnel</option>
+                        {% endif %}
+                    </select>
+                </div>
+                <div class="col-lg-6 disabled">
+                    <select class="form-control" disabled>
+                        <option>{{ classeur.type.nom }}</option>
+                    </select>
                 </div>
             </div>
 
@@ -185,7 +199,7 @@
 
                     <a href="{{ path('classeur') }}" class="btn btn-primary navbar-btn">
                         <span class="glyphicon glyphicon-share-alt"></span>
-                        Retour à la liste des classeur
+                        Retour à la liste des classeurs
                     </a>
                 </div>
                 <div class="col-lg-2">
@@ -220,7 +234,41 @@
         <br/>
 
         <form id="form_edit" action="{{ path("classeur_update") }}" method="post">
-        <input type="hidden" name="id" value="{{ classeur.id }}"/>
+            <input type="hidden" name="id" value="{{ classeur.id }}"/>
+
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="titre_form_element">
+                        <span class="glyphicon glyphicon-play"></span>
+                        &nbsp;&nbsp;&nbsp;Visibilit&eacute;
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="titre_form_element">
+                        <span class="glyphicon glyphicon-play"></span>
+                        &nbsp;&nbsp;&nbsp;Type du classeur
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="row">
+                <div class="col-lg-6">
+                    <select class="fuckingvisibility form-control" id="visibilite" name="visibilite" disabled>
+                        <option value="2" {% if classeur.visibilite == 2 %} selected="selected" {% endif %}>Privé à partir de moi</option>
+                        <option value="0" {% if classeur.visibilite == 0 %} selected="selected" {% endif %}>Privé</option>
+                        <option value="1" {% if classeur.visibilite == 1 %} selected="selected" {% endif %}>Public</option>
+                        {% if classeur.visibilite == 3 %}
+                            <option value="3" selected="selected">Pour le service organisationnel</option>
+                        {% endif %}
+                    </select>
+                </div>
+                <div class="col-lg-6 disabled">
+                    <select class="form-control" disabled>
+                        <option>{{ classeur.type.nom }}</option>
+                    </select>
+                </div>
+            </div>
 
         <div class="titre_form_element" disabled>
             <span class="glyphicon glyphicon-play"></span>
@@ -363,7 +411,7 @@
 
                     <a href="{{ path('classeur') }}" class="btn btn-primary navbar-btn">
                         <span class="glyphicon glyphicon-share-alt"></span>
-                        Retour à la liste des classeur
+                        Retour à la liste des classeurs
                     </a>
 
                 </div>
@@ -506,5 +554,6 @@
             });
         </script>
     </div>
-    <object id="winFirefoxPlugin" type="application/x-sharepoint" style="position: absolute; top: 2000000 px; left: 2000000 px;"></object>
+    {#<object id="winFirefoxPlugin" type="application/x-sharepoint" style="position: absolute; top: 2000000 px; left: 2000000 px;"></object>#}
+    <object id="winFirefoxPlugin" type="application/x-sharepoint"></object>
 {% endblock %}
